# err-fusion

./: .gitignore  CMakeLists.txt  README.md
include/: Err.h  ErrFusion.h  Error.h  ErrorKind.h  ErrorWrapper.h  Ok.h  Result.h  ResultBase.h  err.h  err_fusion.h  error.h  error_kind.h  error_wrapper.h  ok.h  result.h  result_base.h
include/ErrorKind/: IoError.h
include/error_kind/: io_error.h
src/: CMakeLists.txt  ErrFusion.cpp  err_fusion.cpp  main.cpp
test/: CMakeLists.txt  err_fusion_test.cpp  error_test.cpp
tests/: CMakeLists.txt  ErrorTests.cpp  error_test.cpp
